force-app/main/default/objects/Scoring_Event_Team__c/Scoring_Event_Team__c.object-meta.xml
<CustomObject>
    <label>Scoring Event Team</label>
    <nameField>
        <label>Scoring Event Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scoring Event Teams</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>