force-app/main/default/objects/Scoring_Event_Team__c/fields/Event_Team_Scoring__c.field-meta.xml
<CustomField>
    <fullName>Event_Team_Scoring__c</fullName>
    <label>Scoring</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>