force-app/main/default/objects/Scoring_Event_Team__c/fields/Scoring_Event__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Event__c</fullName>
    <label>Event</label>
    <referenceTo>Scoring_Event__c</referenceTo>
    <relationshipLabel>Event Teams</relationshipLabel>
    <relationshipName>Scoring_Event_Teams</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>