force-app/main/default/objects/Scoring_Event_Team__c/fields/Scoring_Event_Location__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Event_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Scoring_Event_Location__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Scoring_Event_Teams</relationshipName>
    <type>Lookup</type>
</CustomField>