force-app/main/default/objects/Scoring_Event_Team__c/fields/Scoring_Team__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Team__c</fullName>
    <label>Team</label>
    <referenceTo>Scoring_Team__c</referenceTo>
    <relationshipLabel>Teams</relationshipLabel>
    <relationshipName>Scoring_Event_Teams</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>